# plumbum

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
plumbum-cli/: Cargo.toml
plumbum-cli/src/: main.rs
plumbum-cli/src/commands/: apply.rs  dashboard.rs  explain.rs  export.rs  init.rs  mod.rs  plan.rs  show.rs  stream.rs  validate.rs
plumbum-config/: Cargo.toml
plumbum-config/src/: defaults.rs  lib.rs  parse.rs  types.rs
plumbum-core/: Cargo.toml
plumbum-core/src/: dns.rs  features.rs  lib.rs  pcap.rs  zeek.rs
plumbum-mcp/: Cargo.toml
plumbum-mcp/src/: main.rs  protocol.rs
plumbum-score/: Cargo.toml
plumbum-score/src/: composite.rs  explain.rs  lib.rs  normalize.rs  weights.rs
plumbum-store/: Cargo.toml
plumbum-store/src/: artifact.rs  ingest.rs  lib.rs  query.rs  schema.rs
plumbum-stream/: Cargo.toml
plumbum-stream/src/: accumulator.rs  capture.rs  lib.rs  scorer.rs
plumbum-tui/: Cargo.toml
plumbum-tui/src/: app.rs  lib.rs  theme.rs
plumbum-tui/src/views/: dashboard.rs
plumbum-tui/src/widgets/: gauge.rs  mod.rs  severity.rs  sparkline.rs
