[package]
name = "plumbum-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for Plumbum DNS analysis engine"

[[bin]]
name = "plumbum-mcp"
path = "src/main.rs"

[dependencies]
plumbum-core = { path = "../plumbum-core" }
plumbum-score = { path = "../plumbum-score" }
plumbum-store = { path = "../plumbum-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
