[package]
name = "plumbum-tui"
version.workspace = true
edition.workspace = true
description = "Rich terminal dashboard for Plumbum"

[dependencies]
plumbum-core = { path = "../plumbum-core" }
plumbum-score = { path = "../plumbum-score" }
plumbum-store = { path = "../plumbum-store" }
ratatui = "0.29"
crossterm = "0.28"
